# swanky

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  bristol.py  build.rs  crates.js  deny.toml  docker-compose.yaml  index.html  lpn-params.py  rust-toolchain  rust-toolchain.toml  search-index.js  secretsister.yaml  settings.html  source-files.js  swanky  test_inputs  update_docs.sh
bristol-fashion/: Cargo.toml
bristol-fashion/circuits/: aes_192.txt  divide64.txt  mult2_64.txt  mult64.txt  neg64.txt  sha256.txt  sub64.txt  udivide64.txt  zero_equal.txt
bristol-fashion/src/: circuits.rs  lib.rs
crates/aes-rng/: Cargo.toml
crates/channel/: Cargo.toml
crates/field/: Cargo.toml
crates/field-binary/: Cargo.toml
crates/field-f61p/: Cargo.toml
crates/field-ff-primes/: Cargo.toml  build.rs
crates/field-test/: Cargo.toml
crates/flatbuffer-build/: Cargo.toml
crates/party/: Cargo.toml
crates/serialization/: Cargo.toml
diet-mac-and-cheese/: Cargo.toml  README.md  build.rs  test_circuits.sh  test_edabits.sh
diet-mac-and-cheese/examples/: dietmc_lib.rs  edabits.rs  network_edabits.rs
diet-mac-and-cheese/src/: backend.rs  backend_extfield.rs  backend_multifield.rs  backend_trait.rs  backend_zki.rs  circuit_ir.rs  circuits.rs  cli.rs  edabits.rs  error.rs  fields.rs  gadgets.rs  homcom.rs  lib.rs  mac.rs  memory.rs  plaintext.rs  read_sieveir_phase2.rs  sieveir_reader_fbs.rs  sieveir_reader_text.rs  svole_thread.rs  svole_trait.rs  text_reader.rs
diet-mac-and-cheese/web-mac-and-cheese/: README.md
etc/: ci.py  (+18 more)
fancy-garbling/: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
fancy-garbling/base_conversion/: Cargo.toml  build.rs
fancy-garbling/benches/: circuits.rs  garbling.rs  semihonest_2pc.rs  util.rs  wire_operations.rs
fancy-garbling/circuits/: adder_32bit.txt
fancy-garbling/examples/: adder_skcd.txt  approx_activations.rs  bin_cmul_cost.rs  classic.rs  gcd.rs  linear_oram.rs  mixed_radix_addition_cost.rs  semihonest_2pc.rs  sign_cost.rs  simple_sum.rs  unpacking.rs
fancy-garbling/scripts/: make_lookup_tables.py  update_docs.sh
fancy-garbling/src/: circuit.rs  classic.rs  depth_informer.rs  dummy.rs  error.rs  errors.rs  fancy.rs  garble.rs  informer.rs  lib.rs  parser.rs  static.rs  util.rs  wire.rs
humidor/: Cargo.toml  all.html  index.html  sidebar-items.js
humidor/benches/: random_circuit.rs
humidor/examples/: random_circuit.rs  random_circuit_interactive.rs  random_circuit_noninteractive.rs  random_circuit_noninteractive_with_shared.rs  random_circuit_once.rs  random_circuit_shared_witness.rs
humidor/ligero/: fn.expected_proof_size.html  index.html  sidebar-items.js  struct.Round0.html  struct.Round1.html  struct.Round2.html  struct.Round3.html  struct.Round4.html  trait.FieldForLigero.html
humidor/src/: circuit.rs  circuitgen.rs  f2_19x3_26.rs  f2_8x3_9.rs  f5038849.rs  fft.rs  lib.rs  ligero.rs  merkle.rs  numtheory.rs  params.rs  polynomial.rs  threshold_secret_sharing.rs  util.rs
inferno/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Proof.html
inferno/benches/: random_circuit.rs
inferno/examples/: inferno.rs
inferno/proof/: struct.Proof.html
inferno/src/: cache.rs  circuit.rs  hashers.rs  lib.rs  proof.rs  proof_single.rs  round.rs  secretsharing.rs  tests.rs  utils.rs
keyed_arena/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.AllocationKey.html  struct.BorrowedAllocation.html  struct.KeyedArena.html  struct.KeyedArenaFromPool.html  struct.KeyedArenaPool.html  struct.KeyedArenaStats.html
keyed_arena/src/: lib.rs
mac-n-cheese/compiler/: Cargo.toml
mac-n-cheese/event-log/: Cargo.toml
mac-n-cheese/inspector/: Cargo.toml
mac-n-cheese/ir/: Cargo.toml  build.rs
ocelot/: Cargo.toml  README.md  all.html  build.rs  enum.Error.html  index.html  sidebar-items.js  test_edabits.sh
ocelot/.cargo/: config
ocelot/benches/: base_svole.rs  base_vole.rs  eq.rs  lpn_svole.rs  oprf.rs  ot.rs  sp_svole.rs  svole.rs
ocelot/cbits/: transpose.c
ocelot/edabits/: index.html  sidebar-items.js  (+8 more)
popsicle/: .gitignore  Cargo.toml  README.md  all.html  deltas.txt  enum.Error.html  index.html  output_timing.txt  sidebar-items.js  type.MultiPartyReceiver.html  type.MultiPartySender.html  type.Receiver.html  type.Sender.html  values.txt
schmivitz/: Cargo.toml
scuttlebutt/: Cargo.toml  README.md  all.html  build.rs  constant.AES_HASH.html  constant.FIXED_KEY_AES128.html  fn.track_unix_channel_pair.html  fn.unix_channel_pair.html  index.html  macro.prime_field_using_ff!.html  macro.prime_field_using_ff.html  sidebar-items.js  struct.Aes128.html  struct.Aes256.html  struct.AesHash.html  struct.AesRng.html  struct.Block.html  struct.Block512.html  struct.HashChannel.html  struct.SyncChannel.html  struct.TrackChannel.html  struct.UniformIntegersUnderBound.html  trait.Malicious.html  trait.SemiHonest.html  type.TrackUnixChannel.html  type.UnixChannel.html
simple-arith-circuit/: Cargo.toml
twopac/: Cargo.toml
vectoreyes/: Cargo.toml  README.md  all.html  build.rs  cmd.py  constant.VECTOR_BACKEND.html  enum.MicroArchitecture.html  enum.VectorBackend.html  index.html  sidebar-items.js  struct.Aes128.html  struct.Aes128EncryptOnly.html  struct.Aes256.html  struct.Aes256EncryptOnly.html  struct.I16x16.html  struct.I16x8.html  struct.I32x4.html  struct.I32x8.html  struct.I64x2.html  struct.I64x4.html  struct.I8x16.html  struct.I8x32.html  struct.U16x16.html  struct.U16x8.html  struct.U32x4.html  struct.U32x8.html  struct.U64x2.html  struct.U64x4.html  struct.U8x16.html  struct.U8x32.html  trait.AesBlockCipher.html  trait.AesBlockCipherDecrypt.html  trait.ExtendingCast.html  trait.HasVector.html  trait.Scalar.html  trait.SimdBase.html  trait.SimdBase32.html  trait.SimdBase4x.html  trait.SimdBase4x64.html  trait.SimdBase64.html  (+4 more)
zkv/: .gitattributes  .gitignore  AES.cry  Cargo.toml  README.md  circuit.genlib  vg2bf.py
(+2137 files in other folders)
