[workspace]
resolver = "2"
members = [
    "diet-mac-and-cheese",
    "fancy-garbling",
    "fancy-garbling/base_conversion",
    "humidor",
    "inferno",
    "keyed_arena",
    "mac-n-cheese/compiler",
    "mac-n-cheese/event-log",
    "mac-n-cheese/inspector",
    "mac-n-cheese/ir",
    "mac-n-cheese/party",
    "mac-n-cheese/runner",
    "mac-n-cheese/sieve-parser",
    "mac-n-cheese/vole",
    "mac-n-cheese/wire-map",
    "ocelot",
    "popsicle",
    "scuttlebutt",
    "simple-arith-circuit",
    "vectoreyes",
]


[workspace.package]
authors = ["swanky authors <swanky@galois.com>"]
license = "MIT"
edition = "2021"
publish = false
version = "0.5.0"

[workspace.dependencies]
# Our crates
fancy-garbling = { path = "fancy-garbling" }
fancy-garbling-base-conversion = { path = "fancy-garbling/base_conversion" }
humidor = { path = "humidor" }
keyed_arena = { path = "keyed_arena" }
mac-n-cheese-ir = { path = "mac-n-cheese/ir" }
mac-n-cheese-compiler = { path = "mac-n-cheese/compiler" }
mac-n-cheese-event-log = { path = "mac-n-cheese/event-log" }
mac-n-cheese-runner = { path = "mac-n-cheese/runner" }
mac-n-cheese-vole = { path = "mac-n-cheese/vole" }
mac-n-cheese-party = { path = "mac-n-cheese/party" }
mac-n-cheese-wire-map = { path = "mac-n-cheese/wire-map" }
mac-n-cheese-sieve-parser = { path = "mac-n-cheese/sieve-parser" }
ocelot = { path = "ocelot" }
popsicle = { path = "popsicle" }
scuttlebutt = { path = "scuttlebutt" }
simple-arith-circuit = { path = "simple-arith-circuit" }
vectoreyes = { path = "vectoreyes" }


# Patched Dependencies
ff = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
ff_codegen = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1.1" }

# External Dependencies
aes = "0.8.2"
aes-gcm = "0.10.1"
anyhow = "1.0.70"
arc-swap = "1.6.0"
arrayvec = "0.7.2"
bincode = "1.3.3"
bitpacking = "0.8.4"
bitvec = { version =  "1.0.1", features = ["alloc"] }
# We disable avx512 since we typically run on skylake.
blake3 = { version = "1.3.3", features = ["no_avx512"] }
bufstream = "0.1.4"
bumpalo = "3.12.0"
bumpalo-herd = "0.1.2"
bytemuck = { version = "1.13.1", features = ["min_const_generics", "extern_crate_alloc"] }
bytes = "1.4.0"
cc = "1.0.79"
ciborium = "0.2.0"
clap = "4.2.1"
color-eyre = "0.6.2"
criterion = "0.4.0"
crossbeam = "0.8.2"
crossbeam-queue = "0.3.8"
crypto-bigint = { version =  "0.5.1", features = ["generic-array"] }
dhat = "0.3.2"
digest = "0.10.6"
eyre = "0.6.8"
flatbuffers = "23.1.21"
flume = "0.10.14"
generic-array = "0.14.7"
hex = "0.4.3"
io-uring = "0.5.13"
itertools = "0.10.5"
jemallocator = "0.5.0"
lazy_static = "1.4.0"
libc = "0.2.141"
log = "0.4.17"
lz4 = "1.24.0"
memchr = "2.5.0"
memmap2 = "0.5.10"
merkle-cbt = "0.3.2"
mimalloc = { version = "0.1.36", default-features = false }
moka = "0.10.2"
ndarray = "0.15.6"
nix = "0.26.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num_cpus = "1.15.0"
openssl = "0.10.49"
parking_lot = "0.12.1"
pretty_env_logger = "0.4"
proptest = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.7.0"
regex = "1.7.3"
ring = "0.16.20"
rpmalloc = "0.2.2"
rustc-hash = "1.1.0"
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
serde = "1.0.159"
serde_json = "1.0.95"
sha2 = "0.10.6"
simple_logger = "4.1.0"
smallvec = { version = "1.10.0" , features = ["const_generics", "union", "const_new"] }
snafu = "0.7.4"
snmalloc-rs = { version = "0.3.3", default-features = false, features = ["build_cc", "usecxx17"] }
sprs = "0.11.0"
subtle = "2.4.0"
tempfile = "3.5.0"
twox-hash = "1.6.3"
zki_sieve = { git = "https://github.com/QED-it/zkinterface-ir.git", rev = "3368622bdf5306256e56826141517a3a34f8f85c"}

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true


