[workspace]
resolver = "2"
members = [
    "crates/*",
    "diet-mac-and-cheese",
    "diet-mac-and-cheese/web-mac-and-cheese/wasm",
    "diet-mac-and-cheese/web-mac-and-cheese/websocket",
    "fancy-garbling",
    "fancy-garbling/base_conversion",
    "humidor",
    "inferno",
    "keyed_arena",
    "mac-n-cheese/compiler",
    "mac-n-cheese/event-log",
    "mac-n-cheese/inspector",
    "mac-n-cheese/ir",
    "mac-n-cheese/party",
    "mac-n-cheese/runner",
    "mac-n-cheese/sieve-parser",
    "mac-n-cheese/vole",
    "mac-n-cheese/wire-map",
    "ocelot",
    "popsicle",
    "scuttlebutt",
    "simple-arith-circuit",
    "vectoreyes",
    "zkv",
]


[workspace.package]
authors = ["swanky authors <swanky@galois.com>"]
license = "MIT"
edition = "2021"
publish = false
version = "0.5.0"

[workspace.dependencies]
# Don't remove, or modify, the below "# BEGIN OUR CRATES" line. It's used by etc/new-crate.py
# BEGIN OUR CRATES
diet-mac-and-cheese = { path = "diet-mac-and-cheese" }
fancy-garbling = { path = "fancy-garbling" }
fancy-garbling-base-conversion = { path = "fancy-garbling/base_conversion" }
humidor = { path = "humidor" }
inferno = { path = "inferno" }
keyed_arena = { path = "keyed_arena" }
mac-n-cheese-compiler = { path = "mac-n-cheese/compiler" }
mac-n-cheese-event-log = { path = "mac-n-cheese/event-log" }
mac-n-cheese-ir = { path = "mac-n-cheese/ir" }
mac-n-cheese-party = { path = "mac-n-cheese/party" }
mac-n-cheese-runner = { path = "mac-n-cheese/runner" }
mac-n-cheese-sieve-parser = { path = "mac-n-cheese/sieve-parser" }
mac-n-cheese-vole = { path = "mac-n-cheese/vole" }
mac-n-cheese-wire-map = { path = "mac-n-cheese/wire-map" }
ocelot = { path = "ocelot" }
popsicle = { path = "popsicle" }
scuttlebutt = { path = "scuttlebutt" }
simple-arith-circuit = { path = "simple-arith-circuit" }
swanky-field = { path = "crates/field" }
swanky-field-binary = { path = "crates/field-binary" }
swanky-field-f61p = { path = "crates/field-f61p" }
swanky-field-ff-primes = { path = "crates/field-ff-primes" }
swanky-field-fft = { path = "crates/field-fft" }
swanky-field-test = { path = "crates/field-test" }
swanky-flatbuffer-build = { path = "crates/flatbuffer-build" }
swanky-generic-array = { path = "crates/generic-array" }
swanky-serialization = { path = "crates/serialization" }
vectoreyes = { path = "vectoreyes" }
web-mac-n-cheese-wasm = { path = "diet-mac-and-cheese/web-mac-and-cheese/wasm" }
web-mac-n-cheese-websocket = { path = "diet-mac-and-cheese/web-mac-and-cheese/websocket" }
# END OUR CRATES
# Don't remove, or modify, the above "# END OUR CRATES" line. It's used by etc/new-crate.py

# Patched Dependencies
ff = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
ff_codegen = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
curve25519-dalek = { version = "4.0.0", features = ["rand_core"] }

# External Dependencies
aes = "0.8.3"
aes-gcm = "0.10.2"
anyhow = "1.0.72"
arc-swap = "1.6.0"
arrayvec = "0.7.4"
bincode = "1.3.3"
bitpacking = "0.8.4"
bitvec = { version =  "1.0.1", features = ["alloc"] }
# We disable avx512 since we typically run on skylake.
blake3 = { version = "1.4.1", features = ["no_avx512"] }
bufstream = "0.1.4"
bumpalo = "3.13.0"
bumpalo-herd = "0.1.2"
bytemuck = { version = "1.13.1", features = ["min_const_generics", "extern_crate_alloc"] }
bytes = "1.4.0"
cc = "1.0.79"
ciborium = "0.2.1"
clap = { version = "4.3.15", features = ["derive"] }
color-eyre = "0.6.2"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0", features = ["color"] }
criterion = "0.5.1"
crossbeam = "0.8.2"
crossbeam-queue = "0.3.8"
crypto-bigint = { version =  "0.5.2", features = ["generic-array"] }
dhat = "0.3.2"
digest = "0.10.7"
eyre = "0.6.8"
flatbuffers = "23.5.26" # Keep this version in sync with crates/flatbuffer-build/src/flatc-ver.txt
flume = "0.10.14"
generic-array = "0.14.7"
hex = "0.4.3"
io-uring = "0.6.0"
itertools = "0.11.0"
jemallocator = "0.5.0"
lazy_static = "1.4.0"
libc = "0.2.147"
log = "0.4.19"
lz4 = "1.24.0"
memchr = "2.5.0"
memmap2 = "0.7.1"
merkle-cbt = "0.3.2"
mimalloc = { version = "0.1.37", default-features = false }
moka = "0.11.2"
ndarray = "0.15.6"
nix = "0.26.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num_cpus = "1.16.0"
openssl = "0.10.55"
parking_lot = "0.12.1"
pretty_env_logger = "0.5"
proptest = "1.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.7.0"
regex = "1.9.1"
ring = "0.16.20"
rpmalloc = "0.2.2"
rustc-hash = "1.1.0"
rustls = "0.21.5"
rustls-pemfile = "1.0.3"
serde = "1.0.171"
serde_json = "1.0.103"
sha2 = "0.10.7"
simple_logger = "4.2.0"
smallvec = { version = "1.11.0" , features = ["const_generics", "union", "const_new"] }
snafu = "0.7.5"
snmalloc-rs = { version = "0.3.4", default-features = false, features = ["build_cc", "usecxx17"] }
sprs = "=0.11.0" # See issue #123
subtle = { version = "2.5.0", features = ["core_hint_black_box", "const-generics"] }
tempfile = "3.6.0"
tungstenite = { version="0.19.0", features = ["rustls"] }
twox-hash = "1.6.3"
wasm-bindgen = "0.2.87"
zki_sieve = { git = "https://github.com/QED-it/zkinterface-ir.git", rev = "3368622bdf5306256e56826141517a3a34f8f85c"}

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true


