[workspace]
resolver = "2"
members = [
  "bristol-fashion",
  "crates/*",
  "diet-mac-and-cheese",
  "diet-mac-and-cheese/web-mac-and-cheese/wasm",
  "diet-mac-and-cheese/web-mac-and-cheese/websocket",
  "fancy-garbling",
  "fancy-garbling/base_conversion",
  "humidor",
  "inferno",
  "keyed_arena",
  "mac-n-cheese/compiler",
  "mac-n-cheese/event-log",
  "mac-n-cheese/inspector",
  "mac-n-cheese/ir",
  "mac-n-cheese/runner",
  "mac-n-cheese/sieve-parser",
  "mac-n-cheese/vole",
  "mac-n-cheese/wire-map",
  "ocelot",
  "popsicle",
  "schmivitz",
  "scuttlebutt",
  "simple-arith-circuit",
  "vectoreyes",
  "zkv",
]

[workspace.package]
authors = ["swanky authors <swanky@galois.com>"]
license = "MIT"
edition = "2021"
publish = false
version = "0.5.0"

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
# Don't remove, or modify, the below "# BEGIN OUR CRATES" line. It's used by ./swanky new-crate
# BEGIN OUR CRATES
bristol-fashion = { path = "bristol-fashion" }
diet-mac-and-cheese = { path = "diet-mac-and-cheese" }
fancy-garbling = { path = "fancy-garbling" }
fancy-garbling-base-conversion = { path = "fancy-garbling/base_conversion" }
humidor = { path = "humidor" }
inferno = { path = "inferno" }
keyed_arena = { path = "keyed_arena" }
mac-n-cheese-compiler = { path = "mac-n-cheese/compiler" }
mac-n-cheese-event-log = { path = "mac-n-cheese/event-log" }
mac-n-cheese-inspector = { path = "mac-n-cheese/inspector" }
mac-n-cheese-ir = { path = "mac-n-cheese/ir" }
mac-n-cheese-runner = { path = "mac-n-cheese/runner" }
mac-n-cheese-sieve-parser = { path = "mac-n-cheese/sieve-parser" }
mac-n-cheese-vole = { path = "mac-n-cheese/vole" }
mac-n-cheese-wire-map = { path = "mac-n-cheese/wire-map" }
ocelot = { path = "ocelot" }
popsicle = { path = "popsicle" }
schmivitz = { path = "schmivitz" }
scuttlebutt = { path = "scuttlebutt" }
simple-arith-circuit = { path = "simple-arith-circuit" }
swanky-channel = { path = "crates/channel" }
swanky-field = { path = "crates/field" }
swanky-field-binary = { path = "crates/field-binary" }
swanky-field-f61p = { path = "crates/field-f61p" }
swanky-field-ff-primes = { path = "crates/field-ff-primes" }
swanky-field-fft = { path = "crates/field-fft" }
swanky-field-test = { path = "crates/field-test" }
swanky-flatbuffer-build = { path = "crates/flatbuffer-build" }
swanky-party = { path = "crates/party" }
swanky-serialization = { path = "crates/serialization" }
vectoreyes = { path = "vectoreyes" }
web-mac-n-cheese-wasm = { path = "diet-mac-and-cheese/web-mac-and-cheese/wasm" }
web-mac-n-cheese-websocket = { path = "diet-mac-and-cheese/web-mac-and-cheese/websocket" }
zkv = { path = "zkv" }
# END OUR CRATES
# Don't remove, or modify, the above "# END OUR CRATES" line. It's used by ./swanky new-crate

# Patched Dependencies
ff = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
ff_codegen = { git = "https://github.com/GaloisInc/ff", rev = "1a4c6138e2e76e13f8d54fae81857e2cea3cbc4d" }
curve25519-dalek = { version = "4.1.2", features = ["rand_core"] }

# External Dependencies
aes = "0.8.3"
aes-gcm = "0.10.3"
anyhow = "1.0.79"
arc-swap = "1.6.0"
arrayvec = "0.7.4"
bincode = "1.3.3"
bitpacking = "0.9.2"
bitvec = { version = "1.0.1", features = ["alloc"] }
# We disable avx512 since we typically run on skylake.
blake3 = { version = "1.5.0", features = ["no_avx512"] }
bufstream = "0.1.4"
bumpalo = "3.14.0"
bumpalo-herd = "0.1.2"
bytemuck = { version = "1.14.3", features = [
  "min_const_generics",
  "extern_crate_alloc",
] }
bytes = "1.5.0"
cc = "1.0.83"
ciborium = "0.2.2"
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0", features = ["color"] }
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"
crypto-bigint = { version = "0.5.5", features = ["generic-array"] }
dhat = "0.3.3"
digest = "0.10.7"
env_logger = "0.11.1"
eyre = "0.6.12"
flatbuffers = "23.5.26" # Keep this version in sync with crates/flatbuffer-build/src/flatc-ver.txt
flume = "0.11.0"
generic-array = "1.0.0"
hex = "0.4.3"
io-uring = "0.6.3"
itertools = "0.12.1"
jemallocator = "0.5.4"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.20"
lz4 = "1.24.0"
memchr = "2.7.1"
memmap2 = "0.9.4"
merkle-cbt = "0.3.2"
merlin = "3.0.0"
mimalloc = { version = "0.1.39", default-features = false }
moka = { version = "0.12.5", features = ["sync"] }
ndarray = "0.15.6"
# Rather than enabling nix features on a per-crate basis (which could lead to issues where
# compiling the whole workspace might succeed, but compiling an individual crate might fail),
# we just enable all the features we need at the workspace root.
nix = { version = "0.27.1", features = ["sched"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
pretty_env_logger = "0.5"
proptest = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.8.1"
regex = "1.10.3"
ring = "0.17.7"
rpmalloc = "0.2.2"
rustc-hash = "1.1.0"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
serde = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
sha3 = "0.10.8"
smallvec = { version = "1.13.1", features = [
  "const_generics",
  "union",
  "const_new",
] }
snafu = "0.8.0"
snmalloc-rs = { version = "0.3.4", default-features = false, features = [
  "build_cc",
  "usecxx17",
] }
sprs = "=0.11.0" # See issue #123
subtle = { version = "2.5.0", features = [
  "core_hint_black_box",
  "const-generics",
] }
tempfile = "3.10.0"
thiserror = "1.0.56"
toml = "0.8.10"
tungstenite = { version = "0.21.0", features = ["rustls"] }
twox-hash = "1.6.3"
wasm-bindgen = "0.2.91"

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev.package]
# See #147
jemalloc-sys.opt-level = 3
