[package]
name = "bristol-fashion"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
#num-traits.workspace = true
#bytemuck.workspace = true
#subtle.workspace = true
#aes.workspace = true
#lazy_static.workspace = true

#[dev-dependencies]
#aes.workspace = true
#proptest.workspace = true
#lazy_static.workspace = true
