[package]
name = "diet-mac-and-cheese"
readme = "README.md"
description = "A diet version of the Mac'n'Cheese protocol"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "circuit"]
autoexamples = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
exe = ["clap/derive"]
ff = ["scuttlebutt/ff"]
secp256 = []

[dependencies]
blake3.workspace = true
rand.workspace = true
clap = {workspace = true, optional = true}
eyre.workspace = true
generic-array.workspace = true
log.workspace = true
mac-n-cheese-sieve-parser.workspace = true
pretty_env_logger.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
scuttlebutt.workspace = true
subtle.workspace = true
ocelot.workspace = true
zki_sieve.workspace = true
flatbuffers.workspace = true
nix.workspace = true

[[example]]
name = "network_edabits"
required-features = ["exe"]
path = "examples/network_edabits.rs"

[[example]]
name = "edabits"
required-features = ["exe"]
path = "examples/edabits.rs"


[[bin]]
name = "dietmc_zki"
required-features = ["exe"]
path = "bin/dietmc_zki.rs"

[[bin]]
name = "dietmc_0p"
required-features = ["exe"]
path = "bin/dietmc_0p.rs"
