[package]
name = "fancy-garbling"
version = "0.4.0"
authors = ["Brent Carmer <bcarmer@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library for boolean and arithmetic garbling"
categories = ["cryptography"]
keywords = ["cryptography", "garbled-circuit", "GC"]
edition = "2021"
autobenches = false
publish = false

[lib]
doctest = false

[features]
default = ["std"]
ot = ["ocelot/ot"]
nightly = ["scuttlebutt/nightly","ocelot/nightly"]
serde1 = ["serde", "scuttlebutt/serde1", "serde_json"]
parser = ["regex"]
sgx = ["scuttlebutt/sgx", "ocelot/sgx", "sgx_tstd", "serde_json/alloc"]
std = ["scuttlebutt/std", "ocelot/std", "serde_json/std"]

[dependencies]
base_conversion = { path = "base_conversion" }
# TODO(interstellar)? features = ["hash_aes"], grep "pub fn hash"
scuttlebutt = { path = "../scuttlebutt", default-features = false, features = ["hash_aes", "rand_aes"] }
ocelot = { path = "../ocelot", default-features = false }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
rand = { version = "0.8.5", default-features = false }
regex = { version = "1.4.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, optional = true }
# # TODO(interstellar) serde_with: features = ["alloc"]
# serde_with = { version = "2.1.0", default-features = false, features = ["alloc", "macros"] }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
criterion = "0.3.4"
crossbeam = "0.8.0"
rand = { version = "0.8.5", default-features = false, features = ["std","std_rng"] }
scuttlebutt = { path = "../scuttlebutt", features = ["unix_channel"] }

[[bin]]
name = "gen-deltas"
required-features = ["serde1"]

[[bench]]
name = "wire_operations"
harness = false

[[bench]]
name = "garbling"
harness = false

[[bench]]
name = "circuits"
harness = false

[[bench]]
name = "util"
harness = false

[[example]]
name = "semihonest_2pc"
harness = false
required-features = ["ot"]
