[package]
name = "humidor"
version = "0.0.1"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A test-bed for Ligero-like protocols"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge-proofs", "ligero"]
edition = "2018"
autobenches = false
publish = false

[lib]
doctest = false

[features]

[dependencies]
merkle-cbt = "0.3.0"
rust-crypto = "^0.2.36"
tiny-keccak = { version = "2.0.0", features = ["sha3", "k12"] }
sprs = "0.11.0"
ndarray = "0.15.3"
num-traits = "0.2.14"
rand = "0.7"
rand_core = "0.5.1"
rand_chacha = "0.2.2"
static_assertions = "0.2.3"
subtle = "2.4.0"
scuttlebutt = { path = "../scuttlebutt" }
generic-array = "0.14.4"
blake-hash = "0.4"

[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3"

[[bench]]
name = "random_circuit"
harness = false

[[example]]
name = "random_circuit_interactive"

[[example]]
name = "random_circuit_noninteractive"

[[example]]
name = "random_circuit_noninteractive_with_shared"

[[example]]
name = "random_circuit_shared_witness"

[[example]]
name = "random_circuit_once"
