[package]
name = "humidor"
version = "0.0.1"
authors = ["Ben Hamlin <hamlinb@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A test-bed for Ligero-like protocols"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge-proofs", "ligero"]
edition = "2021"
autobenches = false
publish = false

[lib]
doctest = false

[features]

[dependencies]
merkle-cbt = "0.3.2"
sprs = "0.11.0"
ndarray = "0.15.4"
num-traits = "0.2.14"
rand = "0.8.5"
subtle = "2.4.1"
scuttlebutt = { path = "../scuttlebutt" }
generic-array = "0.14.5"
digest = "0.10.3"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.5"
sha2 = "0.10.2"

[[bench]]
name = "random_circuit"
harness = false

[[example]]
name = "random_circuit_interactive"

[[example]]
name = "random_circuit_noninteractive"

[[example]]
name = "random_circuit_noninteractive_with_shared"

[[example]]
name = "random_circuit_shared_witness"

[[example]]
name = "random_circuit_once"
