[package]
name = "inferno"
description = "An implementation of the Limbo zero knowledge proof protocol"
keywords = ["cryptography", "zero-knowledge", "nizk"]
categories = ["cryptography"]
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
simple-arith-circuit = { workspace = true, features = ["serde"] }
scuttlebutt = { workspace = true, features = ["serde"] }
log.workspace = true
rand.workspace = true
simple_logger.workspace = true
blake3.workspace = true
serde = { workspace = true, features = ["derive"] }
rayon.workspace = true
parking_lot.workspace = true
clap = { workspace = true, features = ["derive"] }
snafu.workspace = true
bincode.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "random_circuit"
harness = false

[[example]]
name = "inferno"
