[package]
name = "inferno"
description = "An implementation of the Limbo zero knowledge proof protocol"
keywords = ["cryptography", "zero-knowledge", "nizk"]
categories = ["cryptography"]
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
blake3.workspace = true
clap = { workspace = true, features = ["derive"] }
generic-array.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
scuttlebutt.workspace = true
serde = { workspace = true, features = ["derive"] }
simple-arith-circuit = { workspace = true, features = ["serde"] }
snafu.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true
env_logger.workspace = true

[[bench]]
name = "random_circuit"
harness = false

[[example]]
name = "inferno"
