[package]
name = "keyed_arena"
description = "Bump allocator which allows for random access to its allocations"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo.workspace = true
crossbeam-queue.workspace = true
