[package]
name = "ocelot"
version = "0.4.0"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library for oblivious transfer protocols"
categories = ["cryptography"]
keywords = ["cryptography", "oblivious-transfer", "OT"]
edition = "2021"
publish = false
autoexamples = true

[lib]

[features]
default = ["std"]
# TODO(interstellar) CHECK that it compiles when enabled;
ot = ["scuttlebutt/cointoss","curve25519-dalek", "scuttlebutt/curve25519"]
# TODO(interstellar) CHECK that it compiles when enabled;
nightly = ["curve25519-dalek/avx2_backend", "scuttlebutt/nightly"]
# TODO(interstellar) CHECK that it compiles when enabled;
hash_aes = ["scuttlebutt/hash_aes"]
# TODO(interstellar) CHECK that it compiles when enabled;
utils_transpose = ["transpose"]
sgx = ["scuttlebutt/sgx", "sgx_tstd"]
std = ["scuttlebutt/std"]

[dependencies]
curve25519-dalek = { version = "2", features = ["std"], optional = true }
libc = "0.2"
rand = { version = "0.8.5", default-features = false }
scuttlebutt = { path = "../scuttlebutt", default-features = false }
transpose = { version =  "0.2.2", optional = true }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ot"
harness = false

[[bench]]
name = "oprf"
harness = false

[[example]]
name = "kmprt"
harness = false

[[example]]
name = "kkrt"
harness = false
required-features = ["ot"]