[package]
name = "popsicle"
readme = "README.md"
description = "A library for private set intersection"
categories = ["cryptography"]
keywords = ["cryptography", "private-set-intersection", "PSI"]
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]

[features]
nightly = ["scuttlebutt/nightly", "ocelot/nightly", "ocelot/nightly"]
psty = ["fancy-garbling", "openssl"]
psty_payload = ["fancy-garbling", "serde", "serde_json", "fancy-garbling/serde"]

[dependencies]
ocelot.workspace = true
scuttlebutt.workspace = true
itertools.workspace = true
rand.workspace = true
sha2.workspace = true
fancy-garbling = { workspace = true, optional = true }
openssl        = { workspace = true, optional = true }
serde          = { workspace = true, features = ["derive"], optional = true }
serde_json     = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "psz"
harness = false

[[bench]]
name = "psty"
harness = false
required-features = ["psty"]

[[bench]]
name = "psty_payload"
harness = false
required-features = ["psty_payload"]

[[example]]
name = "psty"
required-features = ["psty"]

[[example]]
name = "psty-payload"
required-features = ["psty"]
