[package]
name = "popsicle"
version = "0.4.0"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library for private set intersection"
categories = ["cryptography"]
keywords = ["cryptography", "private-set-intersection", "PSI"]
edition = "2021"
publish = false

[lib]

[features]
default = ["std"]
std = []
nightly = ["rand/nightly", "scuttlebutt/nightly", "ocelot/nightly", "ocelot/nightly"]
fancy = ["fancy-garbling"]
psty = ["fancy", "openssl"]
psty_payload = ["fancy","serde", "serde_json", "fancy-garbling/serde1"]

[dependencies]
ocelot         = { path = "../ocelot" }
scuttlebutt    = { path = "../scuttlebutt",  features = ["serde1"]}
itertools      = "0.8"
rand           = "0.8"
sha2           = "0.8"
serde          = {version = "1.0.117", features = ["derive"], optional = true }
serde_json     = {version = "1.0.59", optional = true }
fancy-garbling = { path = "../fancy-garbling", features = ["serde1"], optional = true }
openssl        = { version = "0.10.28", optional = true }

[dev-dependencies]
criterion  = "0.2.11"
clap       = "2.33.0"
serde      = { version = "1.0.92", features = ["derive"] }

[[bench]]
name = "psz"
harness = false

[[bench]]
name = "psty"
harness = false
required-features = ["psty"]

[[bench]]
name = "psty_payload"
harness = false
required-features = ["psty_payload"]

[[example]]
name = "psty"
required-features = ["psty"]

[[example]]
name = "psty-payload"
required-features = ["psty"]
