[package]
name = "schmivitz"
description = "A library for zero-knowledge protocols using VOLE-in-the-head"
categories = ["cryptography"]
keywords = [
    "cryptography",
    "zero-knowledge",
    "VOLE",
    "VOLE-in-the-head",
    "NIZK",
    "non-interactive",
]
autoexamples = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes.workspace = true
blake3.workspace = true
diet-mac-and-cheese.workspace = true
eyre.workspace = true
log.workspace = true
mac-n-cheese-sieve-parser.workspace = true
pretty_env_logger.workspace = true
merlin.workspace = true
proptest.workspace = true
rand.workspace = true
sha3.workspace = true
swanky-field.workspace = true
swanky-field-binary.workspace = true
swanky-serialization.workspace = true
vectoreyes.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "main"
path = "src/main.rs"